# disruption

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
crates/disruption_gateway/: Cargo.toml  LICENSE  README.md
crates/disruption_gateway/src/: error.rs  gateway.rs  lib.rs
crates/disruption_types/: Cargo.toml  README.md
crates/disruption_types/src/: gateway.rs  lib.rs
crates/disruption_types/src/channel/: channel.rs  flags.rs  followed_channel.rs  forum.rs  mention.rs  mod.rs  overwrites.rs  sort_order.rs  thread.rs
crates/disruption_types/src/channel/message/: activity.rs  attachment.rs  call.rs  component.rs  embed.rs  flags.rs  interaction.rs  interaction_metadata.rs  message.rs  mod.rs  reaction.rs  reference.rs  snapshot.rs  subscription.rs  type_.rs
crates/disruption_types/src/entities/: application.rs  application_role_connection.rs  emoji.rs  guild_enums.rs  guilds.rs  mod.rs  onboarding.rs  presence.rs  role.rs  teams.rs  user.rs  user_flags.rs  welcome_screen.rs
crates/disruption_types/src/interactions/: application_command.rs  interaction.rs  mod.rs  resolved.rs
crates/disruption_types/src/payloads/: hello.rs  identify.rs  mod.rs  presence.rs  ready.rs  resume.rs
crates/disruption_types/src/resources/: audit_log.rs  auto_moderation.rs  entitlement.rs  guild_scheduled_event.rs  guild_template.rs  invite.rs  mod.rs  poll.rs  sku.rs  soundboard.rs  stage_instance.rs  sticker.rs  subscription.rs  voice.rs  webhook.rs
crates/disruption_types/tests/: channel_tests.rs  gateway_tests.rs  message_tests.rs  user_tests.rs
crates/disruption_types/tests/common/: mod.rs
crates/disruption_types/tests/fixtures/channels/: dm_channel.json  text_channel.json  voice_channel.json
crates/disruption_types/tests/fixtures/gateway/: hello.json  message_create.json  ready.json
crates/disruption_types/tests/fixtures/guilds/: basic_guild.json
crates/disruption_types/tests/fixtures/interactions/: ping_command.json
crates/disruption_types/tests/fixtures/messages/: basic_message.json  message_with_embed.json
crates/disruption_types/tests/fixtures/roles/: basic_role.json
crates/disruption_types/tests/fixtures/users/: basic_user.json  bot_user.json  full_user.json
crates/disruption_types/tests/fixtures/webhooks/: basic_webhook.json
examples/: basic.rs
src/: client.rs  discord.rs  error.rs  events.rs  gateway.rs  lib.rs  main.rs
src/api/: gateway.rs  mod.rs  opcodes.rs
src/api/channel/: channel.rs  mention.rs  mod.rs  overwrites.rs  thread.rs
src/api/channel/message/: activity.rs  attachment.rs  component.rs  embed.rs  interaction.rs  message.rs  reaction.rs  reference.rs  type_.rs
src/api/entities/: application.rs  emoji.rs  guilds.rs  role.rs  teams.rs  user.rs
src/api/payloads/: identify.rs  presence.rs  ready.rs  resume.rs
src/discord/: client.rs  gateway.rs  mod.rs  opcodes.rs  payloads.rs
src/discord/channel/: channel.rs  mention.rs  mod.rs
src/discord/channel/message/: activity.rs  attachment.rs  embed.rs  interaction.rs  message.rs  mod.rs  reaction.rs  reference.rs
src/discord/entities/: application.rs  channels.rs  emoji.rs  guilds.rs  messages.rs  mod.rs  role.rs  teams.rs  user.rs
src/discord/payloads/: hello.rs  identify.rs  mod.rs  presence.rs  ready.rs
src/implementations/channel/: channel.rs  mod.rs
src/implementations/channel/message/: message.rs
src/internal/: mod.rs
src/traits/: message_callback.rs  message_handler.rs  mod.rs
tests/: error_tests.rs
