[package]
name = "disruption"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbre4k3r@dev.bre4k3r.de>"]
repository = "https://github.com/H1ghBre4k3r/disruption"
description = "A light wrapper around the Discord API and gateway."
license = "MIT"
readme = "README.md"

[lib]
name = "disruption"

[workspace]
members = ["crates/*"]

[dependencies]
disruption_types = { version = "0.1.0", path = "./crates/disruption_types" }
disruption_gateway = { version = "0.1.0", path = "./crates/disruption_gateway" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1.19"
tokio = {version =  "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
futures-util = "0.3.30"
futures-channel = "0.3"
futures = "0.3.30"
reqwest = { version = "0.12", features = ["json"] }
async-channel = "2.3.0"
env_logger = "0.11.3"
log = "0.4.21"
async-trait = "0.1.80"
