[package]
name = "disruption"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbre4k3r@dev.bre4k3r.de>"]
repository = "https://github.com/H1ghBre4k3r/disruption"
description = "A light wrapper around the Discord API and gateway."
license = "MIT"
readme = "README.md"

[lib]
name = "disruption"

[workspace]
members = ["crates/*"]

[dependencies]
disruption_types = { version = "0.1.0", path = "./crates/disruption_types" }
disruption_gateway = { version = "0.1.0", path = "./crates/disruption_gateway" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
serde_repr = "0.1.20"
tokio = {version =  "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5.7"
futures-util = "0.3.30"
futures-channel = "0.3"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json"] }
async-channel = "2.5.0"
env_logger = "0.11.6"
log = "0.4.28"
async-trait = "0.1.89"
