[package]
name = "disruption_gateway"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbre4k3r@dev.bre4k3r.de>"]
repository = "https://github.com/H1ghBre4k3r/disruption"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
disruption_types = { path = "../disruption_types/" }
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4.19"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = "0.20.0"
url = "2.4.0"
