[package]
name = "disruption_gateway"
version = "0.1.0"
edition = "2021"
description = "A small wrapper around the Discord gateway."
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbre4k3r@dev.bre4k3r.de>"]
repository = "https://github.com/H1ghBre4k3r/disruption"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disruption_types = { version = "0.1.0", path = "../disruption_types/" }
async-channel = "2.3.1"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.22"
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
url = "2.5.2"
